--- a/forntend/oma/src/app/app.component.html
+++ b/forntend/oma/src/app/app.component.html
@@ -1,56 +1,9 @@
-<div class="d-flex align-items-end flex-column component">
-  <div class="header border border-bottom border-danger">
-    <div class="container-fluid">
-      <div class="row no-gutters">
-        <div class="col-sm-2 logo">
-          <img src="assets/IMAGES/oma_logo_grap.png" alt="Order Management Application" class="img-fluid">
-        </div>
-        <div class="col-sm-10 text-right pt-4 pr-5">
-          <a href="" class="btn px-3 border-secondary border-rounded mx-1">Logout</a>
-          <a href="" class="btn px-3 border-secondary border-rounded mx-1">Profile</a>
-        </div>
-      </div>
-    </div>
-  </div>
+<div class="align-items-end flex-column component">
+  <app-header></app-header>
   <div class="main bg-light border-bottom border-success">
-    <div class="container-fluid py-5">
-      <div class="row no-gutters py-2">
-        <div class="col-sm-12 col-md-4 p-5">
-          <div class="d-flex mx-auto shadow border-rounded border-secondary main-button p-5">
-            <a href="" class="text-dark align-self-center mx-auto text-center">Złóż zamówienie</a>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-4 p-5">
-          <div class="d-flex mx-auto shadow border-rounded border-secondary main-button p-5">
-            <a href="" class="text-dark align-self-center mx-auto text-center">Zobacz zamówienia</a>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-4 p-5">
-          <div class="d-flex mx-auto shadow border-rounded border-secondary main-button p-5">
-            <a href="" class="text-dark align-self-center mx-auto text-center">Podsumowanie miesiąca</a>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-4 p-5">
-          <div class="d-flex mx-auto shadow border-rounded border-secondary main-button p-5">
-            <a href="" class="text-dark align-self-center mx-auto text-center">Dodaj punkt dostaw</a>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-4 p-5">
-          <div class="d-flex mx-auto shadow border-rounded border-secondary main-button p-5">
-            <a href="" class="text-dark align-self-center mx-auto text-center">Zobacz punkty dostaw</a>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-4 p-5">
-          <div class="d-flex mx-auto shadow border-rounded border-secondary main-button p-5">
-            <a href="" class="text-dark align-self-center mx-auto text-center">Kontakt z dostawcą</a>
-          </div>
-        </div>
-      </div>
-    </div>
+    <app-main-view></app-main-view>
+    <router-outlet></router-outlet>
   </div>
-  <div class="mt-auto footer text-center pt-3">
-    <span class="lead d-block mx-auto">
-      <a href="https://github.com/slawekpaciorek/oma2nd" class="text-dark">OMA - ORDER MANAGEMENT APPLICATION</a>
-    </span>
-  </div>
+  <app-footer></app-footer>
 </div>
+
