--- a/forntend/oma/src/app/component/admin-view/admin-view.component.html
+++ b/forntend/oma/src/app/component/admin-view/admin-view.component.html
@@ -12,7 +12,7 @@
         </div>
         <div class="col-sm-12 col-md-3 p-5">
           <div class="d-flex mx-auto shadow border-rounded border-secondary main-button p-5">
-            <a href="" class="text-dark align-self-center mx-auto text-center">Zobaczy wszystkie firmy</a>
+            <a routerLink="/company/all-companies" class="text-dark align-self-center mx-auto text-center">Zobaczy wszystkie firmy</a>
           </div>
         </div>
         <div class="col-sm-12 col-md-3 p-5">
