Add save path to company controller

--- a/forntend/oma/src/app/component/admin-view/admin-view.component.html
+++ b/forntend/oma/src/app/component/admin-view/admin-view.component.html
@@ -7,7 +7,7 @@
         </div>
         <div class="col-sm-12 col-md-3 p-5">
           <div class="d-flex mx-auto shadow border-rounded border-secondary main-button p-5">
-            <a href="" class="text-dark align-self-center mx-auto text-center">Dodaj firmę</a>
+            <a routerLink="/company/add" class="text-dark align-self-center mx-auto text-center">Dodaj firmę</a>
           </div>
         </div>
         <div class="col-sm-12 col-md-3 p-5">
