--- a/forntend/oma/src/app/component/company-list/company-list.component.html
+++ b/forntend/oma/src/app/component/company-list/company-list.component.html
@@ -1,28 +1,42 @@
 <div class="container-fluid">
-  <div class="row">
-    <table class="table mx-auto p-5">
-      <thead class="thead-dark">
+  <h4 class="h3 p-3">Wszystkie firmy</h4>
+  <div class="row p-5">
+    <table class="table mx-auto">
+      <thead class="text-light bg-secondary">
         <tr class="text-center">
-          <th>Company id</th>
-          <th>Company name</th>
-          <th>Company tax number id</th>
-          <th>Company address</th>
-          <th>Action</th>
+          <th>Id</th>
+          <th>Nazwa firmy</th>
+          <th>NIP</th>
+          <th class="text-right">Adres</th>
+          <th></th>
         </tr>
       </thead>
       <tbody>
       <tr class="text-center" *ngFor="let tempCompany of companies">
-        <td>{{tempCompany.id}}</td>
-        <td>{{tempCompany.name}}</td>
-        <td>{{tempCompany.taxNumberId}}</td>
-        <td>
-          {{tempCompany.address.streetNameAndNumber}}<br/>
-          {{tempCompany.address.zipCode}} {{tempCompany.address.city}}<br/>
-          {{tempCompany.address.mobilePhoneNumber}}
+        <td>{{tempCompany._id}}</td>
+        <td>{{tempCompany._name}}</td>
+        <td>{{tempCompany._taxNumberId}}</td>
+        <td class="text-right">
+          {{tempCompany._address._streetNameAndNumber}}<br/>
+          {{tempCompany._address._zipCode}} {{tempCompany._address._city}}<br/>
+          {{tempCompany._address._mobilePhoneNumber}}
         </td>
-        <td>
-          <button class="btn border-success mx-2">Edytuj</button>
-          <button class="btn border-danger mx-2">Usuń</button>
+        <td class="text-right">
+          <button class="btn border-success mx-2 text-success">
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-info-circle-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM8 5.5a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
+            </svg>
+          </button>
+          <button class="btn border-warning mx-2 text-warning">
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-question-circle-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.496 6.033a.237.237 0 0 1-.24-.247C5.35 4.091 6.737 3.5 8.005 3.5c1.396 0 2.672.73 2.672 2.24 0 1.08-.635 1.594-1.244 2.057-.737.559-1.01.768-1.01 1.486v.105a.25.25 0 0 1-.25.25h-.81a.25.25 0 0 1-.25-.246l-.004-.217c-.038-.927.495-1.498 1.168-1.987.59-.444.965-.736.965-1.371 0-.825-.628-1.168-1.314-1.168-.803 0-1.253.478-1.342 1.134-.018.137-.128.25-.266.25h-.825zm2.325 6.443c-.584 0-1.009-.394-1.009-.927 0-.552.425-.94 1.01-.94.609 0 1.028.388 1.028.94 0 .533-.42.927-1.029.927z"/>
+            </svg>
+          </button>
+          <button class="btn border-danger mx-2 text-danger">
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-exclamation-circle-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8 4a.905.905 0 0 0-.9.995l.35 3.507a.552.552 0 0 0 1.1 0l.35-3.507A.905.905 0 0 0 8 4zm.002 6a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
+            </svg>
+          </button>
         </td>
       </tr>
       </tbody>
