Add red test for save product in service

--- a/backend/oma/src/main/resources/templates/email-templates/registrationTemplate.html
+++ b/backend/oma/src/main/resources/templates/email-templates/registrationTemplate.html
@@ -1,4 +1,4 @@
-<div th:replace="header.html"></div>
+<div th:replace="header.html"></div>s
 <section title="main">
     <h2 class="h2 p-3 w-100 text-center pt-3">Rejestracja użytkownika w OMA - Order Management Application</h2>
     <div class="container p-3">
