--- a/forntend/oma/src/app/component/main-view/main-view.component.html
+++ b/forntend/oma/src/app/component/main-view/main-view.component.html
@@ -1,8 +1,9 @@
-<ul class="list list-inline text-right bg-dark text-light p-3">
-  <li class="list-inline-item mx-2">
-    <a class="text-light" routerLink="/admin-view">Admin</a>
-  </li>
-  <li class="list-inline-item mx-2">
-    <a class="text-light" routerLink="/user-view">User</a>
-  </li>
-</ul>
+<div class="container-fluid py-5">
+  <div class="row no-gutters py-2 justify-content-center">
+    <div class="">
+      <div class="d-flex mx-auto shadow border-rounded border-secondary main-button">
+        <a routerLink="/demo" class="text-dark align-self-center mx-auto text-center">Wersja demo</a>
+      </div>
+    </div>
+  </div>
+</div>
