--- a/forntend/oma/src/app/component/main-view/main-view.component.html
+++ b/forntend/oma/src/app/component/main-view/main-view.component.html
@@ -1,9 +1,15 @@
 <div class="container-fluid py-5">
   <div class="row no-gutters py-2 justify-content-center">
-    <div class="">
-      <div class="d-flex mx-auto shadow border-rounded border-secondary main-button">
-        <a routerLink="/demo" class="text-dark align-self-center mx-auto text-center">Wersja demo</a>
+    <div class="" *ngIf="!checkConfiguration();then thenBlock else elseBlock"></div>
+    <ng-template #thenBlock>
+      <div class="">
+        <div class="d-flex mx-auto shadow border-rounded border-secondary main-button">
+          <a routerLink="/demo" class="text-dark align-self-center mx-auto text-center">Wersja demo</a>
+        </div>
       </div>
-    </div>
+    </ng-template>
+    <ng-template #elseBlock>
+      <div class="">Application is running in the demo version. Please <a routerLink="/login">LogIn</a></div>
+    </ng-template>
   </div>
 </div>
