--- a/forntend/oma/src/app/component/file-upload/file-upload.component.html
+++ b/forntend/oma/src/app/component/file-upload/file-upload.component.html
@@ -1,6 +1,8 @@
-<div class="form-group">
-  <label for="file">Choose File</label>
-  <input type="file"
-         id="file"
-         (change)="handleFileInput($event.target.files)">
+<div>
+  <form [formGroup]="form" (ngSubmit)="onSubmit()">
+    <input type="file" name="profile"  enctype="multipart/form-data" accept=".xlsm,application/msexcel"
+           (change)="onChange($event)" />
+    <button type="submit">Upload Template</button>
+    <button id="delete_button" class="delete_button" type="reset"><i class="fa fa-trash"></i></button>
+  </form>
 </div>
